[gd_scene load_steps=2 format=3 uid="uid://hud_001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPBar" type="ProgressBar" parent="TopBar/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="TopBar/VBoxContainer"]
layout_mode = 2
text = "HP: 100/100"

[node name="LevelLabel" type="Label" parent="TopBar/VBoxContainer"]
layout_mode = 2
text = "Level 1 | EXP: 0/100"

[node name="GoldLabel" type="Label" parent="TopBar/VBoxContainer"]
layout_mode = 2
text = "Gold: 50"

[node name="WorldInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 80.0
grow_horizontal = 0
text = "Seed: 12345
World: Normal"
horizontal_alignment = 2

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
text = "WASD - Move
E - Interact
I - Inventory
J - Diary
SPACE - Attack (combat)"
horizontal_alignment = 2
